# SCA3300

./: Doxyfile  LICENSE  README.md  cross_file.txt  meson.build
buildcross/: .ninja_deps  .ninja_log  build.ninja
buildcross/example/: sca3300-exe
buildcross/meson-logs/: meson-log.txt
buildcross/meson-private/: sanitycheckcpp
example/: example.cpp  meson.build
src/: macrologger.h  meson.build  sca3300-tools.cpp  sca3300-tools.h  sca3300.cpp  sca3300.h  sca3300def.h
tests/: README.md  meson.build  sca3300.test.cpp
